# fsize

./: .gitignore  Cargo.toml  LICENSE  PKGBUILD  README.md  flake.nix  fsize-linux  release.run  result
src/: lib.rs  main.rs
tests/: test.rs
