[package]
name = "fsize"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "fsize"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4"
thiserror = "2.0"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
